website/versioned_docs/version-1.x/hooks/useSuspenseQuery.mdx
---
sidebar_label: useSuspenseQuery()
---

# useSuspenseQuery(...)

See the [_useSuspenseQuery(...) 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useSuspenseQuery) documentation.

The Hook enables you to perform asynchronous data fetching operations,
similar to [_useQuery_](/hooks/useQuery.mdx) Hook, but with the added benefit of Suspense support.
See the TanStack [_useSuspenseQuery(...) 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useSuspenseQuery)
documentation for more details.

```ts
const result = qraft.<service>.<operation>.useSuspenseQuery(
  parameters,
  queryOptions,
  queryClient,
)
```

### Arguments

1.  `parameters: { path, query, header } | QueryKey | {}`
    - **Required**, OpenAPI request parameters for the query, strictly-typed ✨
    - `parameters` will be used to generate the `QueryKey`
    - Instead of an object with `{path, query, header}`, you can pass a `QueryKey` as an array
      which is also strictly-typed ✨
    - If operation does not require parameters, you must pass an empty object `{}` for strictness

2.  `queryOptions?: UseQueryOptions`
    - **Optional**, represents the options of the [_useSuspenseQuery(...) 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useSuspenseQuery) Hook
      - `queryOptions.queryFn` could be provided to override the default `queryFn` used by Qraft
      - ~~`queryOptions.queryKey`~~ is not allowed, as it will be generated from `parameters`

3.  `queryClient?: QueryClient`
    - **Optional** [_QueryClient 🌴_](https://tanstack.com/query/latest/docs/reference/QueryClient) to be used
    - _If not provided_
      - `QraftContext.queryClient` will be used if available
      - [_useQueryClient() 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useQueryClient)
        result will be used as a fallback

### Returns

`TData` - the result from the query

### Example

```tsx title="src/ApprovalPolicyName.tsx"
import  { Suspense } from 'react';
import { createAPIClient } from './api'; // generated by OpenAPI Qraft CLI

const qraft = createAPIClient();

function ApprovalPolicyName() {
  /**
   * `<service>.<operation>.useSuspenseQuery(...)` initiates
   * the request for data retrieval:
   * ###
   * GET /approval_policies/321?items_order=asc&items_order=desc
   * x-monite-version: 1.0.0
   */
  const approvalPolicy =
    qraft.approvalPolicies.getApprovalPoliciesId.useSuspenseQuery(
      {
        header: {
          "x-monite-version": "1.0.0",
        },
        path: {
          approval_policy_id: "123",
        },
        query: {
          items_order: ["asc", "desc"],
        },
      },
    );

  return <div>Approval Policy: {approvalPolicy.name}</div>;
}

export default function() {
  return (
    <Suspense fallback={<div>Loading...</div>}>
      <ApprovalPolicyName />
    </Suspense>
  );
}
```
